--- a/index.html
+++ b/index.html
@@ -737,12 +737,12 @@
     <script>
         // Firebase Configuration (You'll need to replace this with your actual config)
         const firebaseConfig = {
-            apiKey: "your-api-key",
-            authDomain: "your-project.firebaseapp.com",
-            projectId: "your-project-id",
-            storageBucket: "your-project.appspot.com",
-            messagingSenderId: "123456789",
-            appId: "your-app-id"
+            apiKey: "AIzaSyB_iQkaFi6xl6oLi-GINVminASsNwVRzo8",
+            authDomain: "stayfinder-app-36712.firebaseapp.com",
+            projectId: "stayfinder-app-36712",
+            storageBucket: "stayfinder-app-36712.firebasestorage.app",
+            messagingSenderId: "988731098368",
+            appId: "1:988731098368:web:6df395ebf4a5127c3a9fe5
         };
 
         // Initialize Firebase
@@ -1260,3 +1260,4 @@
     </script>
 </body>
 </html>
+
