--- a/index.html
+++ b/index.html
@@ -1206,6 +1206,16 @@
         // Global functions for onclick handlers
         window.bookProperty = bookProperty;
     </script>
+    <div id="paymentModal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); z-index:9999; justify-content:center; align-items:center;">
+    <div style="background:#1a1a2e; padding:30px; border-radius:15px; width:350px;">
+        <h3 style="margin-bottom:15px;">Complete Payment</h3>
+        <p id="paymentPropertyName"></p>
+        <input type="text" placeholder="Enter UPI ID (demo@upi)" style="width:100%; padding:10px; margin:10px 0; border-radius:8px; border:none;">
+        <button onclick="processPayment()" style="width:100%; padding:12px; background:linear-gradient(135deg,#667eea,#764ba2); border:none; border-radius:8px; color:white; font-weight:bold;">Pay Now</button>
+        <button onclick="closePaymentModal()" style="margin-top:10px; width:100%; padding:10px; background:#444; border:none; border-radius:8px; color:white;">Cancel</button>
+    </div>
+</div>
 </body>
 </html>
+
 
