--- a/index.html
+++ b/index.html
@@ -1205,6 +1205,41 @@
         
         // Global functions for onclick handlers
         window.bookProperty = bookProperty;
+        let selectedPropertyForPayment = null;
+
+function openPaymentModal(property) {
+    selectedPropertyForPayment = property;
+    document.getElementById("paymentPropertyName").innerText = property.name;
+    document.getElementById("paymentModal").style.display = "flex";
+}
+
+function closePaymentModal() {
+    document.getElementById("paymentModal").style.display = "none";
+}
+
+async function processPayment() {
+    const user = firebase.auth().currentUser;
+
+    if (!user) {
+        alert("Please login first");
+        return;
+    }
+
+    const paymentId = "PAY" + Date.now();
+
+    await db.collection("bookings").add({
+        propertyId: selectedPropertyForPayment.id,
+        propertyName: selectedPropertyForPayment.name,
+        userEmail: user.email,
+        status: "approved",
+        paid: true,
+        paymentId: paymentId,
+        createdAt: firebase.firestore.FieldValue.serverTimestamp()
+    });
+
+    alert("Payment Successful! Booking Confirmed.");
+    closePaymentModal();
+}
     </script>
     <div id="paymentModal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); z-index:9999; justify-content:center; align-items:center;">
     <div style="background:#1a1a2e; padding:30px; border-radius:15px; width:350px;">
@@ -1217,5 +1252,6 @@
 </div>
 </body>
 </html>
+
 
 
