--- a/index.html
+++ b/index.html
@@ -803,7 +803,69 @@
                 features: ['WiFi', 'AC', 'Housekeeping', 'Gym'],
                 description: 'Premium PG with luxury amenities',
                 available: true
-            }
+            },
+            {
+                id: 'prop5',
+                title: 'Cozy Hostel Stay',
+                type: 'hostel',
+                location: 'Vasai East',
+                lat: 19.391927,
+                lng: 72.839731,
+                price: '₹7,500/month',
+                features: ['WiFi', 'Laundry', 'CCTV Security'],
+                description: 'Affordable hostel near Vasai station with good connectivity.',
+                available: true
+            },
+            {
+    id: 'prop6',
+    title: 'Sunrise PG Home',
+    type: 'pg',
+    location: 'Nalasopara West',
+    lat: 19.418024,
+    lng: 72.811179,
+    price: '₹9,000/month',
+    features: ['WiFi', 'Food Included', 'Power Backup'],
+    description: 'Comfortable PG with homely food and peaceful environment.',
+    available: true
+},
+            {
+    id: 'prop7',
+    title: 'Metro Boys Hostel',
+    type: 'hostel',
+    location: 'Virar East',
+    lat: 19.455910,
+    lng: 72.818650,
+    price: '₹6,500/month',
+    features: ['WiFi', 'Locker Facility', '24x7 Water'],
+    description: 'Budget friendly boys hostel near Virar railway station.',
+    available: true
+},
+            {
+    id: 'prop8',
+    title: 'Comfort Living PG',
+    type: 'pg',
+    location: 'Naigaon East',
+    lat: 19.348740,
+    lng: 72.846930,
+    price: '₹11,000/month',
+    features: ['WiFi', 'AC', 'Study Table', 'Security Guard'],
+    description: 'Modern PG for students and working professionals.',
+    available: true
+},
+        {
+    id: 'prop9',
+    title: 'GreenView Hostel',
+    type: 'hostel',
+    location: 'Vasai West',
+    lat: 19.369720,
+    lng: 72.815490,
+    price: '₹8,000/month',
+    features: ['WiFi', 'Garden Area', 'Laundry', 'CCTV'],
+    description: 'Peaceful hostel surrounded by greenery and fresh air.',
+    available: true
+}
+
+            
         ];
 
         // Initialize properties in Firestore (run once)
@@ -1252,6 +1314,7 @@ async function processPayment() {
 </div>
 </body>
 </html>
+
 
 
 
