--- a/index.html
+++ b/index.html
@@ -735,12 +735,12 @@
     <script>
         // Firebase Configuration (You'll need to replace this with your actual config)
         const firebaseConfig = {
-            apiKey: "AIzaSyB_iQkaFi6xl6oLi-GINVminASsNwVRzo8",
-            authDomain: "stayfinder-app-36712.firebaseapp.com",
-            projectId: "stayfinder-app-36712",
-            storageBucket: "stayfinder-app-36712.firebasestorage.app",
-            messagingSenderId: "988731098368",
-            appId: "1:988731098368:web:6df395ebf4a5127c3a9fe5"
+            apiKey: "AIzaSyBneSN5EWzCTsMJeY1MwbAPNmYm3L2N9_A",
+  authDomain: "stayfinder-bf467.firebaseapp.com",
+  projectId: "stayfinder-bf467",
+  storageBucket: "stayfinder-bf467.firebasestorage.app",
+  messagingSenderId: "829974818988",
+  appId: "1:829974818988:web:d52cd192b623630d442f09"
         };
 
         // Initialize Firebase
@@ -1323,6 +1323,7 @@ function processPayment() {
 </div>
 </body>
 </html>
+
 
 
 
