--- a/index.html
+++ b/index.html
@@ -735,18 +735,18 @@
     <script>
         // Firebase Configuration (You'll need to replace this with your actual config)
         const firebaseConfig = {
-            apiKey: "AIzaSyBneSN5EWzCTsMJeY1MwbAPNmYm3L2N9_A",
-  authDomain: "stayfinder-bf467.firebaseapp.com",
-  projectId: "stayfinder-bf467",
-  storageBucket: "stayfinder-bf467.firebasestorage.app",
-  messagingSenderId: "829974818988",
-  appId: "1:829974818988:web:d52cd192b623630d442f09"
+            apiKey: "AIzaSyDw-DoLT8xoNymDambzoxq2uTqkYbyy6R0",
+  authDomain: "stayfind-54e52.firebaseapp.com",
+  projectId: "stayfind-54e52",
+  storageBucket: "stayfind-54e52.firebasestorage.app",
+  messagingSenderId: "491837969990",
+  appId: "1:491837969990:web:82fdcc2749c897d46a9c47""
         };
 
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
-        const db = firebase.firestore();
-        const auth = firebase.auth();
+const auth = firebase.auth();
+const db = firebase.firestore();
 
         // Global Variables
         let map;
@@ -1323,6 +1323,7 @@ function processPayment() {
 </div>
 </body>
 </html>
+
 
 
 
