--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@
   projectId: "stayfind-54e52",
   storageBucket: "stayfind-54e52.firebasestorage.app",
   messagingSenderId: "491837969990",
-  appId: "1:491837969990:web:82fdcc2749c897d46a9c47""
+  appId: "1:491837969990:web:82fdcc2749c897d46a9c47"
         };
 
         // Initialize Firebase
@@ -1323,6 +1323,7 @@ function processPayment() {
 </div>
 </body>
 </html>
+
 
 
 
