--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
             apiKey: "AIzaSyDw-DoLT8xoNymDambzoxq2uTqkYbyy6R0",
   authDomain: "stayfind-54e52.firebaseapp.com",
   projectId: "stayfind-54e52",
-  storageBucket: "stayfind-54e52.firebasestorage.app",
+  storageBucket: "stayfind-54e52.appspot.com",
   messagingSenderId: "491837969990",
   appId: "1:491837969990:web:82fdcc2749c897d46a9c47"
         };
@@ -1323,6 +1323,7 @@ function processPayment() {
 </div>
 </body>
 </html>
+
 
 
 
