--- a/index.html
+++ b/index.html
@@ -1294,7 +1294,7 @@ const db = firebase.firestore();
                 </div>
             `;
         }
-
+let selectedPropertyForPayment = null;
         // Booking Functions
         function bookProperty(propertyId) {
             if (!currentUser) {
@@ -1409,6 +1409,7 @@ function processPayment() {
 </div>
 </body>
 </html>
+
 
 
 
